# Hexapods

./: README.md  frames.gv
devel/: .catkin  setup.sh
devel/include/hexapod_msg/: allLegPosition.h  bodyPos.h  bodyTwist.h  commands.h  footPosition.h  legAngle.h
devel/include/jethexa_controller_interfaces/: Euler.h  FeetPositions.h  LegJoints.h  LegPosition.h  LegsJoints.h  Pose.h  PoseTransform.h  PoseTransformRequest.h  PoseTransformResponse.h  RunActionSet.h  SetFloat64.h  SetFloat64List.h  SetFloat64ListRequest.h  SetFloat64ListResponse.h  SetFloat64Request.h  SetFloat64Response.h  SetHead.h  SetInt64.h  SetInt64Request.h  SetInt64Response.h  SetPose1.h  SetPose1Request.h  SetPose1Response.h  SetPose2.h  SetPose2Request.h  SetPose2Response.h  SimpleMoving.h  SimpleMovingRequest.h  SimpleMovingResponse.h  State.h  TransformEuler.h  Traveling.h
devel/lib/motion_control/: main  test01  test2
devel/lib/pkgconfig/: gazebo_terrain_tutorial.pc  hexapod_msg.pc  jethexa_control.pc  jethexa_controller.pc  jethexa_controller_interfaces.pc  jethexa_description.pc  motion_control.pc
devel/lib/python3/dist-packages/hexapod_msg/msg/: __init__.py  _allLegPosition.py  _bodyPos.py  _bodyTwist.py  _commands.py  _footPosition.py  _legAngle.py
devel/lib/python3/dist-packages/jethexa_controller/: __init__.py
devel/lib/python3/dist-packages/jethexa_controller_interfaces/msg/: _Euler.py  _FeetPositions.py  _LegJoints.py  _LegPosition.py  _LegsJoints.py  _Pose.py  _RunActionSet.py  _SetHead.py  _State.py  _TransformEuler.py  _Traveling.py  __init__.py
devel/lib/python3/dist-packages/jethexa_controller_interfaces/srv/: _PoseTransform.py  _SetFloat64.py  _SetFloat64List.py  _SetInt64.py  _SetPose1.py  _SetPose2.py  _SimpleMoving.py  __init__.py
devel/share/common-lisp/ros/hexapod_msg/msg/: _package.lisp  _package_allLegPosition.lisp  _package_bodyPos.lisp  _package_bodyTwist.lisp  _package_commands.lisp  _package_footPosition.lisp  _package_legAngle.lisp  allLegPosition.lisp  bodyPos.lisp  bodyTwist.lisp  commands.lisp  footPosition.lisp  hexapod_msg-msg.asd  legAngle.lisp
devel/share/common-lisp/ros/jethexa_controller_interfaces/msg/: Euler.lisp  FeetPositions.lisp  LegJoints.lisp  LegPosition.lisp  LegsJoints.lisp  Pose.lisp  RunActionSet.lisp  SetHead.lisp  State.lisp  TransformEuler.lisp  Traveling.lisp  _package.lisp  _package_Euler.lisp  _package_FeetPositions.lisp  _package_LegJoints.lisp  _package_LegPosition.lisp  _package_LegsJoints.lisp  _package_Pose.lisp  _package_RunActionSet.lisp  _package_SetHead.lisp  _package_State.lisp  _package_TransformEuler.lisp  _package_Traveling.lisp  jethexa_controller_interfaces-msg.asd
devel/share/common-lisp/ros/jethexa_controller_interfaces/srv/: PoseTransform.lisp  SetFloat64.lisp  SetFloat64List.lisp  SetInt64.lisp  SetPose1.lisp  SetPose2.lisp  SimpleMoving.lisp  _package.lisp  _package_PoseTransform.lisp  _package_SetFloat64.lisp  _package_SetPose1.lisp  _package_SimpleMoving.lisp  jethexa_controller_interfaces-srv.asd
devel/share/gazebo_terrain_tutorial/cmake/: gazebo_terrain_tutorialConfig.cmake
devel/share/gennodejs/ros/hexapod_msg/msg/: _index.js  allLegPosition.js  bodyPos.js  bodyTwist.js  commands.js  footPosition.js  legAngle.js
devel/share/gennodejs/ros/jethexa_controller_interfaces/msg/: Euler.js  FeetPositions.js  LegJoints.js  LegPosition.js  LegsJoints.js  Pose.js  RunActionSet.js  SetHead.js  State.js  TransformEuler.js  Traveling.js  _index.js
devel/share/hexapod_msg/cmake/: hexapod_msg-msg-extras.cmake  hexapod_msg-msg-paths.cmake  hexapod_msgConfig.cmake
devel/share/jethexa_control/cmake/: jethexa_controlConfig.cmake
devel/share/jethexa_controller/cmake/: jethexa_controllerConfig.cmake
devel/share/jethexa_controller_interfaces/cmake/: jethexa_controller_interfaces-msg-extras.cmake  jethexa_controller_interfaces-msg-paths.cmake  jethexa_controller_interfacesConfig.cmake
devel/share/jethexa_description/cmake/: jethexa_descriptionConfig.cmake
devel/share/motion_control/cmake/: motion_controlConfig.cmake
devel/share/roseus/ros/hexapod_msg/: manifest.l
devel/share/roseus/ros/hexapod_msg/msg/: allLegPosition.l  (+5 more)
devel/share/roseus/ros/jethexa_controller_interfaces/: manifest.l
install/: .rosinstall
src/gazebo_terrain_tutorial/launch/: terrain_1.launch
src/hexapod_msg/: CMakeLists.txt
src/hexapod_msg/msg/: allLegPosition.msg  bodyPos.msg  bodyTwist.msg  commands.msg  legAngle.msg
src/jethexa_control/: CMakeLists.txt
src/jethexa_control/config/: jethexa_controllers.yaml
src/jethexa_control/launch/: control.launch
src/jethexa_control/scripts/: walk.py  walk_one_leg.py
src/jethexa_controller/: CMakeLists.txt  package.xml
src/jethexa_controller/scripts/: jethexa_controller_main.py
src/jethexa_controller/src/jethexa_controller/: config.py  jethexa.py  run_actionset.py
src/jethexa_description/: CMakeLists.txt  package.xml
src/jethexa_description/gazebo/: jethexa.gazebo.xacro
src/jethexa_description/urdf/: jethexa_description.urdf.xacro  jethexa_description_base_edition.urdf.xacro
src/motion_control/: CMakeLists.txt
src/motion_control/include/motion_control/: config.h  gait.h  gazeboTerrain.txt  gazeboTerrainZhangai.txt  gridMapInfo.h  ikine.h  kailePodi.txt  ros_tool.h  thread_IMUsub.h  thread_baseToOdom.h  thread_gridMapPub.h  thread_humanAndRobotDecision.h  thread_job_working.h  thread_pub_odom.h  thread_pub_stability.h  thread_recvCockpit.h  thread_robot_decision.h  thread_sZxyTcp.h  thread_sendBase.h  trajectory.h  yuezhang_train1.txt
src/motion_control/src/: gait.cpp  gridMapInfo.cpp  ikine.cpp  main.cpp  ros_tool.cpp  test01.cpp  thread_IMUsub.cpp  thread_baseToOdom.cpp  thread_gridMapPub.cpp  thread_humanAndRobotDecision.cpp  thread_job_working.cpp  thread_pub_odom.cpp  thread_pub_stability.cpp  thread_recvCockpit.cpp  thread_robot_decision.cpp  thread_sZxyTcp.cpp  thread_sendBase.cpp  trajectory.cpp
(+26 files in other folders)
